changed the header

--- a/templates/home.min.html
+++ b/templates/home.min.html
@@ -44,6 +44,7 @@
 <body>
     <header id="head-div">
         <div id="title1"> <a href="/"><img
+                    id="animeflix_icon"
                     src="https://animixplay.b-cdn.net/wp-content/uploads/2022/10/cropped-animixplaylogo-1.png"
                     alt="AnimeDex"></a> </div>
         <div id="search-div">
