--- a/templates/episode.min.html
+++ b/templates/episode.min.html
@@ -4,7 +4,7 @@
 <head>
     <link rel="icon" type="image/x-icon"
         href="{{ url_for('static', filename='img/favicon.png')}}">
-    <title>Watch Episode{{title}}-{{heading}}- AnimeDex</title>
+    <title>Watch Episode{{title}}-{{heading}}- AnimeFlix/title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="title" content="Watch Episode{{title}}-{{heading}}- AnimeDex">
     <meta name="description"
