--- a/templates/search.html
+++ b/templates/search.html
@@ -3,8 +3,8 @@
 
 <head>
     <link rel="icon" type="image/x-icon"
-        href="{{ url_for('static', filename='img/favicon.png')}}">
-    <title>Anime Flix</title>
+        href="https://cdn.jsdelivr.net/gh/TechShreyash/AnimeDex@main/static/img/favicon.ico">
+    <title>AnimeXflix</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="title" content="AnimeDex - Watch High Quality Anime Online" />
     <meta name="description"
@@ -25,10 +25,10 @@
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="AnimeDex">
     <meta property="og:url" content="https://animedex.live/">
-    <meta itemprop="image" content="https://cdn.jsdelivr.net/gh/TechShreyash/AnimeDex@main/static/img/home.png">
-    <meta property="og:image" content="https://cdn.jsdelivr.net/gh/TechShreyash/AnimeDex@main/static/img/home.png">
+    <meta itemprop="image" content="https://cdn.jsdelivr.net/gh/TechShreyash/AnimeDex@main/screenshots/home.jpeg">
+    <meta property="og:image" content="https://cdn.jsdelivr.net/gh/TechShreyash/AnimeDex@main/screenshots/home.jpeg">
     <meta property="og:image:secure_url"
-        content="https://cdn.jsdelivr.net/gh/TechShreyash/AnimeDex@main/static/img/home.png">
+        content="https://cdn.jsdelivr.net/gh/TechShreyash/AnimeDex@main/screenshots/home.jpeg">
     <meta property="og:image:width" content="650">
     <meta property="og:image:height" content="350">
     <meta property="twitter:title" content="AnimeDex - Watch High Quality Anime Online">
@@ -37,14 +37,14 @@
     <meta property="twitter:url" content="">
     <meta property="twitter:card" content="summary">
     <meta name="apple-mobile-web-app-status-bar" content="#202125">
-    <link href="{{ url_for('static', filename='css/search.css')}}" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/gh/TechShreyash/AnimeDex@main/static/css/search.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 </head>
 
 <body>
     <header id="head-div">
         <div id="title1">
-            <a href="/"><img src="https://animixplay.b-cdn.net/wp-content/uploads/2022/10/cropped-animixplaylogo-1.png"
+            <a href="/"><img src="https://cdn.jsdelivr.net/gh/TechShreyash/AnimeDex@main/static/img/header.png"
                     alt="AnimeDex"></a>
         </div>
         <div id="search-div">
@@ -64,7 +64,12 @@
         </div>
     </section>
     <hr>
-
+    <footer>
+        <div>
+            <a href="#" target="_blank">MADE WITH <i class="fa fa-heart pulse"></i>BY 
+                Nanashi</a> <a href="#" target="_blank">(@nanashi)</a>
+        </div>
+    </footer>
     <hr>
     <script>
         document.addEventListener("DOMContentLoaded", function () {
