--- a/templates/anime.html
+++ b/templates/anime.html
@@ -3,14 +3,14 @@
 
 <head>
     <link rel="icon" type="image/x-icon"
-        href="{{ url_for('static', filename='img/favicon.png')}}">
-    <title>Watch {{ title }} - AnimeDex</title>
+    href="{{ url_for('static', filename='img/favicon.png')}}">
+    <title>Watch {{ TITLE }} - AnimeFlix</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta name="title" content="Watch {{ title }} - AnimeDex">
+    <meta name="title" content="Watch {{ TITLE }} - AnimeDex">
     <meta name="description"
-        content="Watch {{ title }} free anime online and it's latest episodes on AnimeDex. We provide free anime online experience without ads, signing up or downloading.">
+        content="Watch {{ TITLE }} free anime online and it's latest episodes on AnimeDex. We provide free anime online experience without ads, signing up or downloading.">
     <meta name="keywords"
-        content="{{ title }},animedex, anime dex, hindi dub, hindi sub, english dub, watch anime online, free anime, anime stream, anime hd, english sub, kissanime, gogoanime, animeultima, 9anime, 123animes, animefreak, vidstreaming, gogo-stream, animekisa, zoro.to, gogoanime.run, animefrenzy, animekisa">
+        content="{{ TITLE }},animedex, anime dex, hindi dub, hindi sub, english dub, watch anime online, free anime, anime stream, anime hd, english sub, kissanime, gogoanime, animeultima, 9anime, 123animes, animefreak, vidstreaming, gogo-stream, animekisa, zoro.to, gogoanime.run, animefrenzy, animekisa">
     <meta name="charset" content="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
     <meta name="robots" content="index, follow">
@@ -18,32 +18,32 @@
     <meta name="revisit-after" content="1 days">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta http-equiv="Content-Language" content="en">
-    <meta property="og:title" content="Watch {{ title }} - AnimeDex">
+    <meta property="og:title" content="Watch {{ TITLE }} - AnimeDex">
     <meta property="og:description"
-        content="Watch {{ title }} free anime online and it's latest episodes on AnimeDex. We provide free anime online experience without ads, signing up or downloading.">
+        content="Watch {{ TITLE }} free anime online and it's latest episodes on AnimeDex. We provide free anime online experience without ads, signing up or downloading.">
     <meta property="og:locale" content="en_US">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="AnimeDex">
-    <meta property="og:url" content="{{ animeURL }}">
-    <meta itemprop="image" content="https://cdn.jsdelivr.net/gh/TechShreyash/AnimeDex@main/static/img/home.png">
-    <meta property="og:image" content="https://cdn.jsdelivr.net/gh/TechShreyash/AnimeDex@main/static/img/home.png">
+    <meta property="og:url" content="{{ URL }}">
+    <meta itemprop="image" content="https://cdn.jsdelivr.net/gh/TechShreyash/AnimeDex@main/screenshots/home.jpeg">
+    <meta property="og:image" content="https://cdn.jsdelivr.net/gh/TechShreyash/AnimeDex@main/screenshots/home.jpeg">
     <meta property="og:image:secure_url"
-        content="https://cdn.jsdelivr.net/gh/TechShreyash/AnimeDex@main/static/img/home.png">
+        content="https://cdn.jsdelivr.net/gh/TechShreyash/AnimeDex@main/screenshots/home.jpeg">
     <meta property="og:image:width" content="650">
     <meta property="og:image:height" content="350">
-    <meta property="twitter:title" content="Watch {{ title }} - AnimeDex">
+    <meta property="twitter:title" content="Watch {{ TITLE }} - AnimeDex">
     <meta property="twitter:description"
-        content="Watch {{ title }} free anime online and it's latest episodes on AnimeDex. We provide free anime online experience without ads, signing up or downloading.">
-    <meta property="twitter:url" content="/anime/{{ aid }}">
+        content="Watch {{ TITLE }} free anime online and it's latest episodes on AnimeDex. We provide free anime online experience without ads, signing up or downloading.">
+    <meta property="twitter:url" content="{{ URL }}">
     <meta property="twitter:card" content="summary">
     <meta name="apple-mobile-web-app-status-bar" content="#202125">
     <meta name="theme-color" content="#202125">
-    <link href="{{ url_for('static', filename='css/anime.min.css')}}" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/gh/TechShreyash/AnimeDex@main/static/css/anime.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 
     <style>
         #cover {
-            background-image: url('{{ img }}');
+            background-image: url('{{ IMG }}');
         }
     </style>
 </head>
@@ -52,7 +52,7 @@
     <header id="head-div">
         <div id="title1">
             <a href="/"><img src="https://animixplay.b-cdn.net/wp-content/uploads/2022/10/cropped-animixplaylogo-1.png"
-                    alt="AnimeDex"></a>
+                alt="AnimeDex"></a>
         </div>
         <div id="search-div">
             <form action="/search" method='GET'>
@@ -68,15 +68,15 @@
         </div>
         <div class="anime row">
             <div class="poster col-3">
-                <img src="{{ img }}">
+                <img src="{{ IMG }}">
             </div>
             <div class="details col-6">
-                <h1>{{ title }}</h1>
+                <h1>{{ TITLE }}</h1>
                 <div class="mid" style="margin: 20px 0px;">
                     <span class="cbox">HD</span>
-                    <span class="cbox">{{ DUB }}</span>
+                    <span class="cbox">{{ LANG }}</span>
                     <span class="dot"></span>
-                    <span class="year">{{ SEASON }}</span>
+                    <span class="year">{{ TYPE }}</span>
                 </div>
                 <div id="watchh" class="mid">
                     <a href="{{ WATCHNOW }}" class="watch-btn">
@@ -84,42 +84,42 @@
                     </a>
                 </div>
                 <div id="overview3" class="synopsis">
-                    SYNOP
+                    SYNOPSIS
                 </div>
             </div>
             <div id="info" class="col-3">
                 <div class="info-items overview">
                     <span id="overview2" class="item-head">Overview:</span>
-                    <span id="overview1" class="item-des">SYNOP</span>
+                    <span id="overview1" class="item-des">SYNOPSIS</span>
                 </div>
 
                 <div class=info-items>
                     <span class="item-head">Other Names:</span>
-                    <span class="item-des">{{ other }}</span>
+                    <span class="item-des">{{ OTHER }}</span>
                 </div>
                 <div class=info-items>
                     <span class="item-head">Episodes:</span>
-                    <span class="item-des">{{ episodes }}</span>
+                    <span class="item-des">{{ TOTAL }}</span>
                 </div>
                 <div class=info-items>
                     <span class="item-head">Release Year:</span>
-                    <span class="item-des">{{ year }}</span>
+                    <span class="item-des">{{ YEAR }}</span>
                 </div>
                 <div class=info-items>
                     <span class="item-head">Type:</span>
-                    <span class="item-des">{{ ATYPE }}</span>
+                    <span class="item-des">{{ TYPE }}</span>
                 </div>
                 <div class=info-items>
                     <span class="item-head">Status:</span>
-                    <span class="item-des">{{ status }}</span>
+                    <span class="item-des">{{ STATUS }}</span>
                 </div>
                 <div class=info-items>
                     <span class="item-head">Studios:</span>
-                    <span class="item-des">{{ studios }}</span>
+                    <span class="item-des">{{ STUDIO }}</span>
                 </div>
 
                 <div class="info-items genre">
-                    <span class="item-head">Genres:</span> GENEROS
+                    <span class="item-head">Genres:</span> GENERES
                 </div>
 
 
@@ -132,7 +132,7 @@
         <div class="divo">
             <h2>List Of Episodes:</h2>
             <div class="divo2">
-                EPISOS
+                EPISODES
             </div>
         </div>
 
@@ -148,8 +148,9 @@
     </section>
     <hr>
     <footer>
-        <div> <a href="https://github.com/TechShreyash" target="_blank">MADE WITH <i class="fa fa-heart pulse"></i>BY
-                NANASHI</a> <a href="https://TechZBots.t.me" target="_blank">(@nanashi)</a> </div>
+        <div>
+            <a href="#" target="_blank">MADE WITH <i class="fa fa-heart pulse"></i>BY Nanashi</a> <a href="#" target="_blank">(@Nanashi)</a>
+        </div>
     </footer>
     <hr>
 
