--- a/templates/episode.html
+++ b/templates/episode.html
@@ -4,7 +4,7 @@
 <head>
     <link rel="icon" type="image/x-icon"
         href="{{ url_for('static', filename='img/favicon.png')}}">
-    <title>Watch Episode {{ title }} - {{ heading }} - AnimeFlix/title>
+    <title>Watch Episode {{ title }} - {{ heading }} - AnimeDex</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="title" content="Watch Episode {{ title }} - {{ heading }} - AnimeDex">
     <meta name="description"
@@ -94,7 +94,8 @@
     <hr>
     <footer>
         <div>
-            <a href="https://github.com/TechShreyash" target="_blank">MADE WITH <i class="fa fa-heart pulse"></i>BY Nanashi</a> <a href="#" target="_blank">(@nanashi)</a>
+            <a href="#" target="_blank">MADE WITH <i class="fa fa-heart pulse"></i>BY TECH
+                Nanashi</a> <a href="#" target="_blank">(@nanashi)</a>
         </div>
     </footer>
     <hr>
